25/11/2006
OrbWeaver
- Entity chooser now uses a key in the DEF to specify a container folder, for
  full hierarchical organisation of entities.

** RELEASE 0.7.1

24/11/2006
OrbWeaver
- Entity inspector can show inherited properties from entity class.
- Map loading now shows progress indicator.
- Entity usage information now displayed in Entity Browser.
greebo
- Moved "Export to OBJ" functionality into main Edit menu.

17/11/2006
OrbWeaver
- Fixed problem with objects from DarkRadiant maps disappearing in DoomEdit
  (DoomEdit requires dummy brushes in brushless entities).
- Entity class manager moved into separate module (eclassmgr).

13/11/2006
OrbWeaver
- Fixed segfault when InvertSelection called on an empty map (or any other
  situation where the root node became selected).
- Fixed segfault when a light with a rendered light_center is selected and the
  showAllLightRadii option is active.

** RELEASE 0.7.0

01/11/2006
greebo
- Moved colour schemes to user.xml, added Colour Scheme Editor dialog.

27/10/2006
OrbWeaver
- Simplified/enhanced Entity Inspector.

24/10/2006
OrbWeaver
- Added new XML-based filter system.
- Fixed incorrect polycounts for LWO models.
- Added Media Browser.
greebo
- Added application-wide XML registry.

15/10/2006
greebo
- Added toolbar button to display all light volumes.
- Toolbars use XML config file rather than hard-coding.

13/10/2006
OrbWeaver
- Fixed assertion failure when loading a map with a "name" key set on the
  worldspawn (due to incorrect identification as a model entity).

08/10/2006
OrbWeaver
- Merged upstream revisions 99 and 101
- Merged upstream brushexport plugin (exports to OBJ)
- Merged upstream revision 113 (select inside and select touching)
greebo
- Refactored parsing code in shaders plugin, DefTokeniser accepts list
  of delimiters in constructor.

** RELEASE 0.6.0

29/09/2006
OrbWeaver
- Added Model Selector dialog with preview
- func_static entities created from brushes have "origin" key set correctly